--- a/public/404.html
+++ b/public/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <title>恭喜您，您不小心来到了潘达利亚！</title>
   <style type="text/css">
     body {
       background: url("/assets/tp.png") repeat;
