--- a/public/500.html
+++ b/public/500.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+  <title>很抱歉服务器出了点小问题</title>
   <style type="text/css">
-    body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
-    div.dialog {
-      width: 25em;
-      padding: 0 4em;
-      margin: 4em auto 0 auto;
-      border: 1px solid #ccc;
-      border-right-color: #999;
-      border-bottom-color: #999;
+    body {
+      background: url("/assets/tp.png") repeat;
     }
-    h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
+
+    #panda img {
+      margin-top: 30px;
+      -webkit-border-radius: 6px;
+      -moz-border-radius: 6px;
+      border-radius: 6px;
+    }
+
+    #panda a{
+      position: absolute;
+      left: 20%;
+      top: 31%;
+      padding: 2% 12%;
+      text-indent: -9999px;
+    }
   </style>
 </head>
 
 <body>
-  <!-- This file lives in public/500.html -->
-  <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
+  <!-- This file lives in public/404.html -->
+  <div id="panda">
+    <center>
+      <img alt="Panda" class="panda" src="/assets/panda_500.jpg">
+      <a href="http://www.wowarmory.me">Back</a>
+    </center>
   </div>
 </body>
 </html>
